fix(print): correct gap between sections in aside

--- a/style.css
+++ b/style.css
@@ -280,7 +280,6 @@ header .container > div {
   }
 
   aside {
-    display: block;
     position: absolute;
     top: 0;
     right: 0;
@@ -288,6 +287,7 @@ header .container > div {
     width: 30%;
     margin: 0;
     font-size: 10pt;
+    gap: 2rem;
   }
 
   h1,
